# PSiNad

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Docmainpage.md  DoxyConfig  DoxygenConfig  FINAL_TODO_LIST.md  Handler.cpp  Handler.h  README.md  main.cc  mpi_utils.cpp  mpi_utils.h
models_old/: CMakeLists.txt  forcefield.hdev  forcefieldbase.cpp  forcefieldbase.h  model.cpp  model.h  modelfactory.cppold  modelfactory.h
models_old/barostat/: barostat.h
models_old/bath/: bath.cpp  bath.h
models_old/bo_forcefield/: liquidne_model.cpp  liquidne_model.h  md1d_models.cpp  md1d_models.h  sctest_models.cpp  sctest_models.h  smallmol_models.cpp  smallmol_models.h  water_models.cpp  water_models.h
models_old/flib/: CMakeLists.txt
models_old/flib/H2O/: CMakeLists.txt  h2opot.f90
models_old/flib/H2O2/: CMakeLists.txt  diffsizes.f90  pes_h2o2_ad.f90  pot_H2O2_depr.f90
models_old/flib/NH3/: CMakeLists.txt  NH3-potential.f90  format.py  nh3_info.mod  nh3_mod.mod  nh3_param.inp
models_old/flib/liquidNe/: CMakeLists.txt  pot.f90
models_old/flib/paraH2/: CMakeLists.txt  paraH2.cpp
models_old/flib/water/: CMakeLists.txt
models_old/interface/: interf_gausstddft.cpp  interf_gausstddft.h  interf_mndo99mrci.cpp  interf_mndo99mrci.h  interf_openmm.h
models_old/mole/: atom.h
models_old/nad_forcefield/: ZnPc.h  atomced.cpp  atomced.h  lvcm_model.cpp  lvcm_model.h  manysite_models.cpp  manysite_models.h  nad1d_models.cpp  nad1d_models.h  pyrincavity_models.cpp  pyrincavity_models.h  scatter1d_models.cpp  scatter1d_models.h  spectrum_nadmodels.cpp  spectrum_nadmodels.h  systembath.cpp  systembath.h
models_old/py_interface/: interf_pythonff.cpp  interf_pythonff.h  py_embed.h
models_old/sanderapi/: interf_sander.cpp  interf_sander.h
models_old/thermostat/: thermostat.cpp  thermostat.h
solvers_old/: CMakeLists.txt  option.h  solver.cpp  solver.h  solverfactory.cppold  solverfactory.h
solvers_old/control/: control.cpp  control.h  state.h
solvers_old/core/: option.h  solver.h  solver_iterative.h  solver_static.h
solvers_old/kernels/: kernel.h
solvers_old/solvers_PI/: CMakeLists.txt  cmd_solver.cpp  cmd_solver.h  pild_solver.cpp  pild_solver.h  rot_seperate.h
solvers_old/solvers_dev/: CMakeLists.txt  solver_example.cpp  solver_example.h
solvers_old/solvers_el/: CMakeLists.txt  basis_set.h  dmc.h  simple_integral_gto.cpp  simple_integral_gto.h  solver_scf.cpp  solver_scf.h  tools.h
solvers_old/solvers_el/libcint/: cint.h  cint_funcs.h
solvers_old/solvers_md/: CMakeLists.txt  abstract_traj.h  mbpimd_solver.cpp  mbpimd_solver.h  md_solver.h  mespimd_solver.cpp  mespimd_solver.h  pimd_solver.cpp  pimd_solver.h  pimdpara_solver.cpp  pimdpara_solver.h  ppimd_solver.cpp  ppimd_solver.h  traj.cpp  traj.h
solvers_old/solvers_nad/: CMakeLists.txt  multi_nadtraj.cpp  multi_nadtraj.h  nadtcfer.cpp  nadtcfer.h  nadtraj.cpp  nadtraj.h  solver_bcmf.h  solver_cmm.cpp  solver_cmm.h  solver_lsc.cpp  solver_lsc.h  solver_mmd.cpp  solver_mmd.h  solver_mmsh.cdev  solver_mmsh.hdev  solver_pmm.cpp  solver_pmm.h  solver_pmmsh.h  solver_prodmps.cpp  solver_prodmps.h  solver_qcpi.cpp  solver_qcpi.h  solver_sh.cpp  solver_sh.h  solver_smm.cpp  solver_smm.h  solver_sqc.cpp  solver_sqc.h  solver_wmm.cpp  solver_wmm.h
solvers_old/solvers_rd/: CMakeLists.txt  solver_heom.cpp  solver_heom.cppdev  solver_heom.h  solver_redfield.cpp  solver_redfield.h  solver_sse.cpp  solver_sse.h
src/solvers/: CMakeLists.txt
src/solvers/src/: NAD_AdaptM_Kernel.cpp  NAD_Adapt_Kernel.cpp  NAD_Coup_Kernel.cpp  NAD_Kernel.cpp  Sampling_Kernel.cpp  SolverFactory.cpp
tests/: CMakeLists.txt  Kernel_Customized.c  param_FMO.py  param_LVCMs.py  param_NB.py  param_SB.py  param_SBothers.py  param_nad1d.py  param_nad1d2.py  test2.ipynb  test_Kernel.cppdev  test_MM_Solver.cppdev  test_Param.cpp  test_State.cpp  test_pykids.ipynb
tests/.ipynb_checkpoints/: test_cython-checkpoint.ipynb  test_pykids-checkpoint.ipynb  test_pykids_chem-checkpoint.ipynb  test_pykids_phys-checkpoint.ipynb
tests/example_parm/: param_NAFadapt.json  param_cmm_fmo_opt.json  param_cmm_lvcm_pyr24.json  param_cmm_nad1d_dac.json  param_cmm_nad1d_ecr.json  param_cmm_nad1d_morse15.json  param_cmm_nad1d_sac.json  param_cmm_sb.json  param_cmsh_nad1d_morse3c.json  param_mmd_mndo99.json  param_mmd_nad1d_morse3c.json  param_mmd_nad1d_morse3c_rep_adia.json  param_mmd_nad1d_morse3c_rep_d2a.json  param_mmd_nad1d_morse3c_swarm.json  param_mmd_sb_qct.json  param_naf_nad1d_sacp.json  param_naf_nad1d_sacx.json  param_sh_fmo_ini_dia.json  param_sh_fmo_ini_dia_opt.json  param_sh_nad1d_morse3c.json  param_sqc_fmo.json  param_sqc_sb.json
tests/example_parm/FMO/: param_FMO_CPS0_init0.json  param_FMO_CPS0_init5.json  param_FMO_CPS1_init0.json  param_FMO_CPS1_init5.json  param_FMO_EHR_init0.json  (+23 more)
tests/example_parm_old/: cis-stilbene.hess  param.json  param_cmm_cfs_spinboson.json  param_cmm_cps_fmo.json  param_cmm_cps_spinboson.json  param_cmm_nad1d_morse3a.json  param_cmm_nad1d_morse3c_cv_rep_a2d.json  param_cmm_nad1d_morse3c_cv_rep_adia.json  param_cmm_nad1d_morse3c_cv_rep_d2a.json  param_cmm_nad1d_morse3c_cv_rep_dia.json  param_cmm_sf3.json  param_naf_lvcm_pyr24.json  param_naf_nad1d_morce3c.json  param_naf_nad1d_sacp.json  param_naf_nad1d_sacx.json  param_naf_systembath_sb.json  param_naf_tw_lvcm.json  param_sh_sb_ini_dia.json  param_sqc_nad1d_morse3c_cv_rep_d2a.json  stdev.py
tests/pytest/: Kernel_Customized.py  setup.py  test1.ipynb  test_param.ipynb
tests/unittest/: einsum_benchmark.cpp
thirdpart/: CMakeLists.txt
thirdpart/exprtk/: exprtk.hpp  readme.txt
thirdpart/fparser/: CMakeLists.txt  fpconfig.hh
thirdpart/gflags/: CMakeLists.txt
thirdpart/glog/: CMakeLists.txt
thirdpart/palanteer/: CMakeLists.txt  palanteer.cpp  palanteer.h  palanteer.hbak
thirdpart/xtensor/: xstorage.hpp
wrappers/pybind11/: CMakeLists.txt  MANIFEST.in  kids_kernel.cc  kids_phys.cc  libpykids.cpp  pysetup.cmake.in
wrappers/python/: CMakeLists.txt  MANIFEST.in  pipsetup.cmake.in  pysetup.cmake.in  setup.py  setup_old1.py
wrappers/rustkids/: Cargo.toml
(+1940 files in other folders)
